--- a/app/client/templates/genres/genres.html
+++ b/app/client/templates/genres/genres.html
@@ -1,8 +1,6 @@
 <template name="Genre">
 
-  <div class="genre-title-section flex">
-
-    <div class="menu-spacer"></div>
+  <div class="genre-title-section">
 
     <div class="contents">
 
@@ -12,9 +10,7 @@
 
   </div>
 
-  <div class="genre-popular-section flex">
-
-    <div class="menu-spacer"></div>
+  <div class="genre-popular-section">
 
     <div class="contents">
 
@@ -24,9 +20,7 @@
 
   </div>
 
-  <div class="genre-other-section flex">
-
-    <div class="menu-spacer"></div>
+  <div class="genre-other-section">
 
     <div class="contents">
 
@@ -42,7 +36,7 @@
 
   <div class="genre-popular">
 
-    <div class="content">
+    <div class="contents">
 
       <div class="title">POPULAR</div>
 
