--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -70,14 +70,16 @@ $menu-box-shadow: 0.25rem 0.25rem $app-box-drp-shdw;
 
 $app-section-width: 104.167rem;
 $app-section-padding-left: 8rem;
+$app-section-padding-right: 11.3rem;
 $app-genre-margin-top: 5.417rem;
 $app-genre-margin-bottom: 1.333rem;
-$app-container-width: 20%;
-$app-container-width-small-screen: 25%;
-$app-container-width-large-tablet: 33%;
-$app-container-width-medium-tablet: 50%;
-$app-container-width-large-phone: 100%;
-$app-container-width-large: 60%;
+$app-container-width: 21.54rem; //20%;
+// $app-container-width-small-screen: 25%;
+// $app-container-width-large-tablet: 33%;
+// $app-container-width-medium-tablet: 50%;
+// $app-container-width-large-phone: 100%;
+$app-container-width-large: $app-container-width * 3;
+$app-container-height: 29.4rem;
 $app-container-min-width: 120px;
 $app-container-max-width: 200px;
 $app-container-margin-lr: 1.167rem;
@@ -86,23 +88,27 @@ $app-container-padding-tb: 1.25rem;
 $app-container-box-shadow: 0.083rem 0.166rem $app-box-drp-shdw;
 $app-container-margin-tb: 2.416rem;
 $app-genre-font-size: 2rem;
-$app-image-large-width: 40.5%;
+$app-image-large-width: 29.15rem; //40.5%;
 $app-image-large-max-height: 25rem;
 $app-image-large-margin-right: 2.5rem;
 $app-name-font-size: 1.667rem;
 $app-name-large-font-size: 2.9rem;
-$app-name-line-height: 2.667rem;
+$app-name-line-height: 4.15rem;
+// $app-name-margin-top: 0.734rem
+// $app-name-margin-bottom: 0.734rem
 $app-author-font-size: 1.167rem;
 $app-author-large-font-size: 1.667rem;
-$app-author-line-height: 2rem;
+$app-author-line-height: 2.5rem;
 $app-description-large-font-size: 1.333rem;
 $star-font-size: 1.167rem;
-$star-line-height: 2rem;
-$app-installprice-margin-top: 0.667rem;
+$star-line-height: 2.5rem;
+// $app-installprice-margin-top: 0.667rem;
 $app-install-font-size: 1.083rem;
 $app-install-padding-tb: 0.25rem;
 $app-install-padding-lr: 1.167rem;
 $app-price-font-size: 1.083rem;
+$app-install-price-line-height: 2.5rem;
+$app-description-large-height: 4.5rem;
 
 $welcome-message-height: 16.333rem;
 $welcome-message-font-size: 2rem;
