--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -1,11 +1,9 @@
 <template name="Home">
 
   {{#if message}}
-  <div class="welcome-message flex">
+  <div class="welcome-message">
 
-    <div class="menu-spacer"></div>
-
-    <div class="message flex">
+    <div class="message">
 
       <div class="text">{{message}}</div>
 
@@ -18,9 +16,7 @@
   </div>
   {{/if}}
 
-  <div class="main-section flex">
-
-    <div class="menu-spacer"></div>
+  <div class="main-section">
 
     <div class="contents">
 
