--- a/app/client/templates/home/home.scss
+++ b/app/client/templates/home/home.scss
@@ -1,4 +1,5 @@
 @import "../../stylesheets/variables";
+@import "../components/menu";
 
 body {
 
@@ -8,15 +9,24 @@ body {
 
 .welcome-message {
 
-  width: 100%;
+  position: relative;
   height: $welcome-message-height;
   background-color: $welcome-message-bg;
   overflow: hidden;
+  padding-left: $menu-width + $app-section-padding-left;
+
+  @media screen and (max-width: $small-tablet) {
+
+    padding-left: 0;
+
+  }
 
   .message {
 
-    justify-content: flex-start;
-    align-items: center;
+    @extend .menu-spacer;
+    height: $welcome-message-height;
+    display: table-cell;
+    vertical-align: middle;
 
     .text {
 
@@ -56,6 +66,17 @@ body {
       display: block;
 
     }
+  }
+
+}
+
+.main-section {
+
+  .contents {
+
+    @extend .menu-spacer;
+    @extend .pad-right;
+
   }
 
 }
