--- a/app/client/templates/genres/genres.html
+++ b/app/client/templates/genres/genres.html
@@ -38,7 +38,7 @@
   {{#if routerSubsReady}}
   {{#if countApps genre}}
 
-    <div class="genre-name"><a href="/genres/{{uriEncode genre}}">{{genre}} <i class="icon-chevron-right"></i></a></div>
+    <div class="genre-name"><a href="/appMarket/genres/{{uriEncode genre}}">{{genre}} <i class="icon-chevron-right"></i></a></div>
 
     {{> appTable}}
 
