minor cosmetic changes

--- a/app/client/stylesheets/variables.scss
+++ b/app/client/stylesheets/variables.scss
@@ -61,7 +61,7 @@ $installed-apps-header-text: #222222;
 $update-selector-text: #783189;
 $update-selector-button-text: #222222;
 $update-selector-button-bg: #c3b9c6;
-$update-selector-button-icon: #c9add0;
+$update-selector-button-icon: #a4a4a4;
 $update-selector-button-active-text: #783189;
 $update-selector-button-active-bg: #f3e6ff;
 $update-selector-button-active-border: #783189;
@@ -90,7 +90,7 @@ $app-section-padding-left: 8rem;
 $app-section-padding-right: 11.3rem;
 $app-genre-margin-top: 5.417rem;
 $app-genre-margin-bottom: 1.333rem;
-$app-container-width: 21.54rem;
+$app-container-width: 21.3rem;
 $app-container-width-large: $app-container-width * 3;
 $app-container-height: 29.4rem;
 $app-container-min-width: 120px;
