--- a/app/client/templates/components/app-item.scss
+++ b/app/client/templates/components/app-item.scss
@@ -4,6 +4,7 @@
 
   display: inline-block;
   vertical-align: top;
+  text-align: left;
   width: $app-container-width;
   padding-left: $app-container-margin-lr;
   padding-right: $app-container-margin-lr;
