--- a/app/client/templates/installedApps/installedApps.scss
+++ b/app/client/templates/installedApps/installedApps.scss
@@ -26,12 +26,14 @@
     display: inline-block;
     font-size: $update-selector-text-font-size;
     color: $update-selector-text;
+    vertical-align: middle;
 
   }
 
   .update-selector-buttons {
 
     display: inline-block;
+    vertical-align: middle;
 
     .button {
 
@@ -67,6 +69,76 @@
         i {
           color: #c9add0;
         }
+      }
+
+    }
+
+  }
+
+}
+
+.uninstall-box {
+
+  &.anti-modal-box {
+
+    width: $uninstall-app-modal-width;
+
+  }
+
+  padding-top: $uninstall-app-modal-padding-tb;
+  padding-bottom: $uninstall-app-modal-padding-tb;
+  padding-left: $uninstall-app-modal-padding-lr;
+  padding-right: $uninstall-app-modal-padding-lr;
+  color: $uninstall-app-modal-text;
+  background-color: $uninstall-app-modal-bg;
+
+  .header {
+
+    text-align: center;
+    font-size: $uninstall-app-modal-header-font-size;
+    margin-bottom: $uninstall-app-modal-header-margin-bottom;
+
+  }
+
+  .divider {
+
+    width: 100%;
+    border-bottom: 1px solid $uninstall-app-modal-divider;
+
+  }
+
+  .blurb {
+
+    letter-spacing: 1px;
+    line-height: 1.4;
+    font-size: $uninstall-app-modal-blurb-font-size;
+
+    p {
+      margin-top: $uninstall-app-modal-blurb-p-margin-top;
+      margin-bottom: $uninstall-app-modal-blurb-p-margin-bottom;
+    }
+
+  }
+
+  .buttons {
+
+    word-spacing: $uninstall-app-modal-button-spacing;
+
+    .button {
+
+      display: inline-block;
+      color: $uninstall-app-modal-button-text;
+      background-color: $uninstall-app-modal-button-bg;
+      padding-top: $uninstall-app-modal-button-padding-tb;
+      padding-bottom: $uninstall-app-modal-button-padding-tb;
+      padding-left: $uninstall-app-modal-button-padding-lr;
+      padding-right: $uninstall-app-modal-button-padding-lr;
+      border-radius: 0.5rem;
+      font-size: $uninstall-app-modal-button-font-size;
+      cursor: pointer;
+
+      &:hover, &:active {
+        background-color: $uninstall-app-modal-button-hover-bg;
       }
 
     }
