--- a/app/client/templates/components/topbar.scss
+++ b/app/client/templates/components/topbar.scss
@@ -1,7 +1,7 @@
 @import "../../stylesheets/variables";
 
 .topbar-container {
-  background-color: $topbar-bg;
+  background: $topbar-bg;
   height: $topbar-height;
   position: relative;
   z-index: 2;
