--- a/app/client/templates/installedApps/installedApps.html
+++ b/app/client/templates/installedApps/installedApps.html
@@ -26,7 +26,7 @@
 
       <div class="genre-other">
 
-        {{> appTable genre='Installed'}}
+        {{> appTable genre='Installed' installPage=true}}
 
       </div>
 
