--- a/app/client/templates/components/topbar.html
+++ b/app/client/templates/components/topbar.html
@@ -19,7 +19,7 @@
 
         {{/each}}
 
-        <div class="genre-box extra-genres" data-action="{{#if moreOpen}}close-more-menu{{else}}open-more-menu{{/if}}">
+        <div class="genre-box extra-genres {{#unless extraGenres}}hidden{{/unless}}" data-action="{{#if moreOpen}}close-more-menu{{else}}open-more-menu{{/if}}">
           <a class="more show-above-small-phone">More</a>
           <a class="more hide-above-small-phone">Genres</a>
           <ul class="extra-genres-list {{#if moreOpen}}open{{/if}}">
